assets linear equations

--- a/GaussSquad/Resource/en.lproj/Localizable.strings
+++ b/GaussSquad/Resource/en.lproj/Localizable.strings
@@ -1,5 +1,7 @@
 "MFightFighterTuring_name"="Turing";
 "MFightFighterGauss_name"="Gauss";
+"MHomeItemArithmetic_title"="Arithmetic";
+"MHomeItemLinearEquations_title"="Linear equations";
 
 "VFightInfoCountDown_ready"="Ready";
 "VFightInfoCountDown_fight"="Fight";
