--- a/GaussSquad/Resource/en.lproj/Localizable.strings
+++ b/GaussSquad/Resource/en.lproj/Localizable.strings
@@ -1,6 +1,8 @@
 "MFightFighterTuring_name"="Turing";
 "MFightFighterGauss_name"="Gauss";
+"MHomeItemArithmetic_symbol"="a * b = c";
 "MHomeItemArithmetic_title"="Arithmetic";
+"MHomeItemLinearEquations_symbol"="ax + b = 0";
 "MHomeItemLinearEquations_title"="Linear equations";
 
 "VFightInfoCountDown_ready"="Ready";
