mutable label gauss

--- a/GaussSquad/Resource/en.lproj/Localizable.strings
+++ b/GaussSquad/Resource/en.lproj/Localizable.strings
@@ -4,3 +4,5 @@
 "MHomeItemLinearEquations_title"="Linear equations";
 
 "VLinearEquationsBar_labelTitle"="Linear equation";
+"VLinearEquationsBar_labelGaussName"="Johann Carl Friedrich Gauss";
+"VLinearEquationsBar_labelGaussDate"="\n30/4/1777 – 23/2/1855";
