--- a/GaussSquad/Resource/en.lproj/Localizable.strings
+++ b/GaussSquad/Resource/en.lproj/Localizable.strings
@@ -3,6 +3,6 @@
 "MHomeItemLinearEquations_symbol"="ax + b = 0";
 "MHomeItemLinearEquations_title"="Linear equations";
 
-"VLinearEquationsBar_labelTitle"="Linear equation";
-"VLinearEquationsBar_labelGaussName"="Johann Carl Friedrich Gauss";
+"VLinearEquationsBar_labelTitle"="Linear equations";
+"VLinearEquationsBar_labelGaussName"="Carl Friedrich Gauss";
 "VLinearEquationsBar_labelGaussDate"="\n30/4/1777 – 23/2/1855";
