--- a/GaussSquad/Resource/en.lproj/Localizable.strings
+++ b/GaussSquad/Resource/en.lproj/Localizable.strings
@@ -14,3 +14,5 @@
 "VLinearEquationsBar_labelDescr"="A linear equation is an algebraic equation in which each term is either a constant or the product of a constant and a single variable.\n\nGauss was a German mathematician referred to as the Princeps mathematicorum, he created the algorithm Gaussian Elimination for solving systems of linear equations.";
 "VLinearEquationsPolynomialControl_buttonDone"="Done";
 "VLinearEquationsProjectBarIndeterminates_title"="Indeterminates";
+"VLinearEquationsIndeterminateControl_buttonSave"="Save";
+"VLinearEquationsIndeterminateControl_buttonCancel"="Cancel";
