tuned up indeterminate view

--- a/GaussSquad/Resource/en.lproj/Localizable.strings
+++ b/GaussSquad/Resource/en.lproj/Localizable.strings
@@ -16,3 +16,4 @@
 "VLinearEquationsProjectBarIndeterminates_title"="Indeterminates";
 "VLinearEquationsIndeterminateControl_buttonSave"="Save";
 "VLinearEquationsIndeterminateControl_buttonCancel"="Cancel";
+"VLinearEquationsIndeterminate_labelTitle"="New indeterminate";
