view toast when creating indeterminate

--- a/GaussSquad/Resource/en.lproj/Localizable.strings
+++ b/GaussSquad/Resource/en.lproj/Localizable.strings
@@ -17,3 +17,6 @@
 "VLinearEquationsIndeterminateControl_buttonSave"="Save";
 "VLinearEquationsIndeterminateControl_buttonCancel"="Cancel";
 "VLinearEquationsIndeterminate_labelTitle"="New indeterminate";
+
+"CLinearEquationsIndeterminate_errorNoNumber"="Indeterminates can't start with a number";
+"CLinearEquationsIndeterminate_errorCharacters"="Indeterminates can't have spaces or special characters";
