--- a/GaussSquad/Resource/en.lproj/Localizable.strings
+++ b/GaussSquad/Resource/en.lproj/Localizable.strings
@@ -21,3 +21,4 @@
 "CLinearEquationsIndeterminate_errorInvalid"="Name can't be empty";
 "CLinearEquationsIndeterminate_errorNoNumber"="Indeterminates can't start with a number";
 "CLinearEquationsIndeterminate_errorCharacters"="Indeterminates can't have spaces or special characters";
+"CLinearEquationsIndeterminate_errorExistingIndeterminate"="Indeterminate already exists, use different name";
