--- a/GaussSquad/Resource/en.lproj/Localizable.strings
+++ b/GaussSquad/Resource/en.lproj/Localizable.strings
@@ -18,6 +18,8 @@
 "VLinearEquationsIndeterminateControl_buttonCancel"="Cancel";
 "VLinearEquationsIndeterminate_labelTitle"="New indeterminate";
 "VLinearEquationsPolynomialIndeterminate_labelTitle"="Indeterminate";
+"VLinearEquationsIndeterminateListHeader_labelTitlte"="Indeterminate";
+"VLinearEquationsIndeterminateListHeader_buttonNone"="None";
 
 "CLinearEquationsIndeterminate_errorInvalid"="Name can't be empty";
 "CLinearEquationsIndeterminate_errorNoNumber"="Indeterminates can't start with a number";
