--- a/GaussSquad/Resource/en.lproj/Localizable.strings
+++ b/GaussSquad/Resource/en.lproj/Localizable.strings
@@ -7,7 +7,8 @@
 "MLinearEquationsItem_positive"=" + ";
 "MLinearEquationsItem_negative"=" - ";
 "MLinearEquationsItem_division"="/";
-"MLinearEquationsSolutionStrategyReduction_descr"="Reducing equation %@";
+"MLinearEquationsSolutionStrategyReductionConstants_descr"="Reducing constants in equation %@";
+"MLinearEquationsSolutionStrategyReductionIndeterminates_descr"="Reducing indeterminates in equation %@";
 
 "VLinearEquationsBar_labelTitle"="Linear equations";
 "VLinearEquationsBar_labelGaussName"="Carl Friedrich Gauss";
