--- a/GaussSquad/Resource/en.lproj/Localizable.strings
+++ b/GaussSquad/Resource/en.lproj/Localizable.strings
@@ -9,6 +9,7 @@
 "MLinearEquationsItem_division"="/";
 "MLinearEquationsSolutionStrategyReductionConstants_descr"="Reducing constants in equation %@";
 "MLinearEquationsSolutionStrategyReductionIndeterminates_descr"="Reducing indeterminate in equation %@";
+"MLinearEquationsSolutionStrategyIndeterminatesLeft_descr"="Moved indeterminate to left in equation %@";
 "MLinearEquationsSolutionStrategyRemoveZeros_descr"="Removed zero in equation %@";
 
 "VLinearEquationsBar_labelTitle"="Linear equations";
