--- a/GaussSquad/Resource/en.lproj/Localizable.strings
+++ b/GaussSquad/Resource/en.lproj/Localizable.strings
@@ -9,8 +9,8 @@
 "MLinearEquationsItem_division"="/";
 "MLinearEquationsSolutionStrategyReductionConstants_descr"="Reducing constants in equation %@";
 "MLinearEquationsSolutionStrategyReductionIndeterminates_descr"="Reducing indeterminate in equation %@";
-"MLinearEquationsSolutionStrategyIndeterminatesLeft_descr"="Moved indeterminate to left in equation %@";
-"MLinearEquationsSolutionStrategyRemoveZeros_descr"="Removed zero in equation %@";
+"MLinearEquationsSolutionStrategyIndeterminatesLeft_descr"="Moving indeterminate to left in equation %@";
+"MLinearEquationsSolutionStrategyRemoveZeros_descr"="Removing zero in equation %@";
 
 "VLinearEquationsBar_labelTitle"="Linear equations";
 "VLinearEquationsBar_labelGaussName"="Carl Friedrich Gauss";
