--- a/GaussSquad/Resource/en.lproj/Localizable.strings
+++ b/GaussSquad/Resource/en.lproj/Localizable.strings
@@ -10,7 +10,7 @@
 "MLinearEquationsSolutionStrategyReductionConstants_descr"="Reducing constants in equation %@";
 "MLinearEquationsSolutionStrategyReductionIndeterminates_descr"="Reducing indeterminate in equation %@";
 "MLinearEquationsSolutionStrategyIndeterminatesLeft_descr"="Moving indeterminate to left in equation %@";
-"MLinearEquationsSolutionStrategyRemoveZeros_descr"="Removing zero in equation %@";
+"MLinearEquationsSolutionStrategyMakeZero_descr"="Cleaning result in equation %@";
 "MLinearEquationsSolutionStrategyFractionReduction_descr"="Fraction reduction in equation %@";
 
 "VLinearEquationsBar_labelTitle"="Linear equations";
