--- a/GaussSquad/Resource/en.lproj/Localizable.strings
+++ b/GaussSquad/Resource/en.lproj/Localizable.strings
@@ -15,6 +15,7 @@
 "MLinearEquationsSolutionStrategyZeroFill_descr"="Added %@ to equation %@";
 "MLinearEquationsSolutionStrategyOrderIndeterminates_descr"="Ordering polynomials in equation %@";
 "MLinearEquationsSolutionStrategyPivotOrdering_descr"="Swaping equations %@ and %@";
+"MLinearEquationsSolutionStrategyRowAddition_descr"="%@(equation %@) + (equation %@)";
 
 "VLinearEquationsBar_labelTitle"="Linear equations";
 "VLinearEquationsBar_labelGaussName"="Carl Friedrich Gauss";
