step error attributed text

--- a/GaussSquad/Resource/en.lproj/Localizable.strings
+++ b/GaussSquad/Resource/en.lproj/Localizable.strings
@@ -35,6 +35,7 @@
 "VLinearEquationsSolutionHeaderStart_label"="Initial linear system";
 "VLinearEquationsSolutionHeaderDone_title"="Solution";
 "VLinearEquationsSolutionHeaderDone_subtitle"="\nReduced row echelon form";
+"VLinearEquationsSolutionHeaderError_title"="Error\n";
 
 "CLinearEquationsIndeterminate_errorInvalid"="Name can't be empty";
 "CLinearEquationsIndeterminate_errorNoNumber"="Indeterminate can't start with a number";
