--- a/GaussSquad/Resource/en.lproj/Localizable.strings
+++ b/GaussSquad/Resource/en.lproj/Localizable.strings
@@ -27,6 +27,11 @@
 "MLinearEquationsSolutionStepStart_label"="Linear equations system";
 "MLinearEquationsSolutionStepError_title"="Error: ";
 "MHelpLinearEquationsProjectItemPolynomials_title"="Select a polynomial for edition and chage the indeterminate";
+"MHelpLinearEquationsProjectItemAddPolynomial_title"="Add polynomials to the left side of the equation";
+"MHelpLinearEquationsProjectItemAddRow_title"="Add another equation";
+"MHelpLinearEquationsProjectItemIndeterminates_title"="Create a new indeterminate, you can select one from the list to remove it";
+"MHelpLinearEquationsProjectItemCompress_title"="Compress the equations and remove unnecesary polynomials";
+"MHelpLinearEquationsProjectItemSolution_title"="Solve the system and display every step";
 
 "VLinearEquationsBar_labelTitle"="Linear equations";
 "VLinearEquationsBar_labelGaussName"="Carl Friedrich Gauss";
