--- a/GaussSquad/Resource/en.lproj/Localizable.strings
+++ b/GaussSquad/Resource/en.lproj/Localizable.strings
@@ -29,7 +29,7 @@
 "MHelpLinearEquationsProjectItemPolynomials_title"="Select a polynomial for edition and chage the indeterminate";
 "MHelpLinearEquationsProjectItemAddPolynomial_title"="Add polynomials";
 "MHelpLinearEquationsProjectItemEditRow_title"="Rearrange or delete equation";
-"MHelpLinearEquationsProjectItemAddRow_title"="Add another equation";
+"MHelpLinearEquationsProjectItemAddRow_title"="Add equation";
 "MHelpLinearEquationsProjectItemIndeterminates_title"="Create a new indeterminate, you can select one from the list to remove it";
 "MHelpLinearEquationsProjectItemCompress_title"="Compress the equations and remove unnecesary polynomials";
 "MHelpLinearEquationsProjectItemSolution_title"="Apply Gaussian Elimination displaying every step";
