--- a/GaussSquad/Resource/en.lproj/Localizable.strings
+++ b/GaussSquad/Resource/en.lproj/Localizable.strings
@@ -46,6 +46,7 @@
 "VLinearEquationsPolynomialIndeterminate_labelTitle"="Indeterminate";
 "VLinearEquationsIndeterminateListHeader_labelTitlte"="Indeterminate";
 "VLinearEquationsIndeterminateListHeader_buttonNone"="None";
+"VSettingsCellFractionDigits_labelTitle"="Max fraction digits";
 "VHelp_button"="Done";
 
 "CLinearEquationsIndeterminate_errorInvalid"="Name can't be empty";
