--- a/GaussSquad/Resource/en.lproj/Localizable.strings
+++ b/GaussSquad/Resource/en.lproj/Localizable.strings
@@ -55,8 +55,8 @@
 "VStoreCellPurchasing_label"="Purchasing";
 "VStoreCellPurchased_label"="Purchased";
 "VStoreCellNotAvailable_label"="Not available";
-"VStoreGoPlus_title"="Video captures full";
-"VStoreGoPlus_descr"="Go plus to get unlimited captures";
+"VStoreGoPlus_title"="Indeterminates full";
+"VStoreGoPlus_descr"="Go plus to get unlimited indeterminates";
 "VStoreGoPlusButtons_buttonCancel"="No thanks";
 "VStoreGoPlusButtons_buttonStore"="Go Plus";
 "VHelp_button"="Done";
