--- a/GaussSquad/Resource/en.lproj/Localizable.strings
+++ b/GaussSquad/Resource/en.lproj/Localizable.strings
@@ -90,3 +90,4 @@
 "CLinearEquationsProject_alertEditRowMoveUp"="Move up";
 "CLinearEquationsProject_alertEditRowMoveDown"="Move down";
 "CLinearEquationsProject_alertEditRowCancel"="Cancel";
+"CLinearEquationsPlot_sharingText"="%@ = %@";
