--- a/GaussSquad/Resource/en.lproj/Localizable.strings
+++ b/GaussSquad/Resource/en.lproj/Localizable.strings
@@ -52,6 +52,7 @@
 "VLinearEquationsIndeterminateListHeader_buttonNone"="None";
 "VLinearEquationsPlotBarZoom_descr"="%@x";
 "VSettingsCellFractionDigits_labelTitle"="Max fraction digits";
+"VLinearEquationsPlot_notSupported"="Sorry, your device does not support Metal";
 "VStoreFooter_buttonRestore"="Restore purchase";
 "VStoreCellNew_buttonPurchase"="Purchase";
 "VStoreCellDeferred_label"="Purchase deferred";
