--- a/GaussSquad/Resource/en.lproj/Localizable.strings
+++ b/GaussSquad/Resource/en.lproj/Localizable.strings
@@ -53,6 +53,7 @@
 "VLinearEquationsPlotBarZoom_descr"="%@x";
 "VSettingsCellFractionDigits_labelTitle"="Max fraction digits";
 "VLinearEquationsPlot_notSupported"="Sorry, your device does not support Metal";
+"VCalculatorText_initial"="0";
 "VStoreFooter_buttonRestore"="Restore purchase";
 "VStoreCellNew_buttonPurchase"="Purchase";
 "VStoreCellDeferred_label"="Purchase deferred";
