--- a/GaussSquad/Resource/en.lproj/Localizable.strings
+++ b/GaussSquad/Resource/en.lproj/Localizable.strings
@@ -29,8 +29,9 @@
 "MLinearEquationsSolutionStepError_title"="Error: ";
 "MPlotMenuItemOrigin_title"="Origin";
 "MCalculatorStepsItemBegin_descr"="Begin";
-"MCalculatorFunctionsItemSin_title"="Sin";
-"MCalculatorFunctionsItemCos_title"="Cos";
+"MCalculatorFunctionsItemSin_title"="Sine";
+"MCalculatorFunctionsItemCos_title"="Cosine";
+"MCalculatorFunctionsItemCos_title"="Tangent";
 "MCalculatorFunctionsTrigonometry_title"="Trigonometry";
 "MHelpLinearEquationsProjectItemPolynomials_title"="Select a polynomial for edition or change the indeterminate";
 "MHelpLinearEquationsProjectItemAddPolynomial_title"="Add polynomials";
