--- a/GaussSquad/Resource/en.lproj/Localizable.strings
+++ b/GaussSquad/Resource/en.lproj/Localizable.strings
@@ -29,9 +29,12 @@
 "MLinearEquationsSolutionStepError_title"="Error: ";
 "MPlotMenuItemOrigin_title"="Origin";
 "MCalculatorStepsItemBegin_descr"="Begin";
-"MCalculatorFunctionsItemSin_title"="Sine";
-"MCalculatorFunctionsItemCos_title"="Cosine";
-"MCalculatorFunctionsItemTan_title"="Tangent";
+"MCalculatorFunctionsItemSin_title"="Rad Sine";
+"MCalculatorFunctionsItemCos_title"="Rad Cosine";
+"MCalculatorFunctionsItemTan_title"="Rad Tangent";
+"MCalculatorFunctionsItemSinDeg_title"="Deg Sine";
+"MCalculatorFunctionsItemCosDeg_title"="Deg Cosine";
+"MCalculatorFunctionsItemTanDeg_title"="Deg Tangent";
 "MCalculatorFunctionsTrigonometry_title"="Trigonometry";
 "MHelpLinearEquationsProjectItemPolynomials_title"="Select a polynomial for edition or change the indeterminate";
 "MHelpLinearEquationsProjectItemAddPolynomial_title"="Add polynomials";
