--- a/GaussSquad/Resource/en.lproj/Localizable.strings
+++ b/GaussSquad/Resource/en.lproj/Localizable.strings
@@ -64,6 +64,7 @@
 "VSettingsCellFractionDigits_labelTitle"="Max fraction digits";
 "VLinearEquationsPlot_notSupported"="Sorry, your device does not support Metal";
 "VCalculatorOptionsHeader_title"="Functions";
+"VCalculatorOptionsHeader_buttonNone"="None";
 "VStoreFooter_buttonRestore"="Restore purchase";
 "VStoreCellNew_buttonPurchase"="Purchase";
 "VStoreCellDeferred_label"="Purchase deferred";
