--- a/GaussSquad/Resource/en.lproj/Localizable.strings
+++ b/GaussSquad/Resource/en.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-"MHomeItemCalculator_symbol"="a × b = c";
+"MHomeItemCalculator_symbol"="+ - × ÷ √ ^";
 "MHomeItemCalculator_title"="Calculator";
 "MHomeItemLinearEquations_symbol"="ax + b = 0";
 "MHomeItemLinearEquations_title"="Linear equations";
