--- a/GaussSquad/Resource/en.lproj/Localizable.strings
+++ b/GaussSquad/Resource/en.lproj/Localizable.strings
@@ -36,6 +36,7 @@
 "MCalculatorFunctionsItemCosDeg_title"="Deg Cosine";
 "MCalculatorFunctionsItemTanDeg_title"="Deg Tangent";
 "MCalculatorFunctionsItemSquareRoot_title"="Square root";
+"MCalculatorFunctionsItemCubeRoot_title"="Cube root";
 "MCalculatorFunctionsTrigonometry_title"="Trigonometry";
 "MCalculatorFunctionsExponents_title"="Exponents";
 "MHelpLinearEquationsProjectItemPolynomials_title"="Select a polynomial for edition or change the indeterminate";
