--- a/GaussSquad/Resource/en.lproj/Localizable.strings
+++ b/GaussSquad/Resource/en.lproj/Localizable.strings
@@ -37,6 +37,9 @@
 "MCalculatorFunctionsItemTanDeg_title"="Deg Tangent";
 "MCalculatorFunctionsItemSquareRoot_title"="Square root";
 "MCalculatorFunctionsItemCubeRoot_title"="Cube root";
+"MCalculatorFunctionsItemSquare_title"="Square";
+"MCalculatorFunctionsItemCube_title"="Cube";
+"MCalculatorFunctionsItemReciprocal_title"="Reciprocal";
 "MCalculatorFunctionsTrigonometry_title"="Trigonometry";
 "MCalculatorFunctionsExponents_title"="Exponents";
 "MHelpLinearEquationsProjectItemPolynomials_title"="Select a polynomial for edition or change the indeterminate";
